# Squid-Storage

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  a.out  build.sh  imgui.ini  main.cpp
.github/workflows/: cmake-multi-platform.yml
client/: raygui
client/data/: file2.txt
client/src/: Client.hpp  client.cpp  client.hpp  filelock.cpp  filelock.hpp  filemanager.cpp  filemanager.hpp  filetransfer.cpp  iclient.hpp  main.cpp  originalraygui.h  raygui.h
common/: squidprotocolformatter.cpp  squidprotocolformatter.hpp
common/src/: filetransfer.cpp  squidprotocol.cpp  squidprotocol.hpp  squidprotocolformatter.cpp  squidprotocolformatter.hpp
common/src/filesystem/: filelock.cpp  filelock.hpp  filemanager.cpp  filemanager.hpp  filetransfer.cpp  filetransfer.hpp
common/src/peer/: peer.cpp  peer.hpp
common/src/squidprotocol/: squidProtocolActive.cpp  squidProtocolActive.hpp  squidProtocolCommunicator.cpp  squidProtocolCommunicator.hpp  squidProtocolFormatter.cpp  squidProtocolFormatter.hpp  squidProtocolPassive.cpp  squidProtocolPassive.hpp  squidprotocol.cpp  squidprotocol.hpp  squidprotocolformatter.hpp
data-node/: Makefile
data-node/src/: datanode.cpp  datanode.hpp  idatanode.hpp  main.cpp
imgui/: a.out  imgui.ini
imgui/backends/: imgui_impl_opengl2.cpp  imgui_impl_opengl2.h  imgui_impl_sdl2.cpp  imgui_impl_sdl2.h
imgui/src/: Application.cpp  Application.hpp  README.md  filemanager.hpp  main.cpp
server/: Makefile
server/src/: Server.hpp  iserver.hpp  main.cpp  server.cpp  server.hpp  squidProtocolPassiveServer.cpp  squidProtocolServer.cpp
test/: DataNode  SquidStorageServer  testMultiClient copy.sh  testMultiClient.sh  testMultiDataNode.sh  testMultiple.sh
test/test_client1/: datanode1.txt
test/test_client2/: clientfile2.txt  imgui.ini
test/test_datanode2/: datanode2.txt
test/test_datanode3/: datanode3.txt
test_txt/: clientfile.txt  datanode.txt  datatoserverfile.txt
